--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,18 +19,17 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: rgb(235, 91, 136);
   font-family: 'Quicksand';
 }
 
+.hero{
+  background-image: url('/public/assets/bg3.jpg');
+}
 .Navbar{
   color: #ec4399;
 }
+
 h2{
   text-align: center;
   font-size: xx-large;
