--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,28 +18,28 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: rgb(235, 91, 136);
-  font-family: 'Quicksand';
+  color: #de1c85;
+  background: white;
+  font-family: 'Roboto', sans-serif;
 }
 
-.hero-container{
-  background: linear-gradient(
-    to bottom,
-    transparent,
-    rgb(var(--background-end-rgb))
-  )
-  rgb(var(--background-start-rgb));
+h1{
+  font-family: 'Righteous', sans-serif;
 }
-
 h2{
   text-align: center;
-  font-size: xx-large;
   margin-bottom: 40px;
+  font-weight: 900;
+  font-family: 'Righteous', sans-serif;
 }
-
+button{
+  font-family: 'Righteous', sans-serif;
+  font-weight: bold;
+}
 h3{
   font-size: x-large;
   text-align: center;
+  font-weight: bold;
   line-height: 30px;
+  font-family: 'Righteous', sans-serif;
 }
