--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,7 +19,7 @@
 
 body {
   color: white;
-  background: rgb(28, 28, 30);
+  background: #0c1317;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -28,7 +28,7 @@ h1{
   font-size: 2em;
   font-weight: bolder;
   text-align: center;
-  margin-top: 2em;
+  /* margin-top: 2em; */
 }
 h2{
   text-align: center;
@@ -47,6 +47,14 @@ button{
   position: relative;
 }
 
+.hero-container h1, .hero-container h2{
+  text-align: left;
+}
+
+.hero-image-container {
+  position: relative;
+}
+
 .hero-image {
   width: 100%;
   height: auto;
@@ -59,10 +67,16 @@ button{
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
+  background: linear-gradient(
+    rgba(22, 22, 30, 0.5),
+    rgba(22, 22, 30, 0.7),
+    rgba(22, 22, 30, 0.7),
+    rgba(22, 22, 30, 0.5)   /* Ajusta este valor, por ejemplo, 0.5 para una transparencia más oscura */
+  );
   pointer-events: none;
-  z-index: -1;
+  z-index: 0; /* O cualquier número mayor que cero según tu necesidad */
 }
+
 
 .hero-text {
   position: absolute;
@@ -73,6 +87,7 @@ button{
   z-index: 1;
   color: white;
 }
+
 h3{
   font-size: x-large;
   font-weight: bold;
@@ -82,6 +97,9 @@ h3{
 }
 .swiper-button-prev:after, .swiper-button-next:after{
   color:white;
+}
+.swiper-pagination-bullet {
+  background-color: white !important; /* Cambia el color a blanco o el color deseado */
 }
 .svg-icon.search-icon {
   display: inline-block;
@@ -104,3 +122,4 @@ h3{
     }
   }
 }
+
